# MedTracker

./: .gitignore  daily-report-with DRGS.py  daily-report.py  drgs.py  examCard.py  functions.py  functions_SX.py  labCard.py  level2-4.csv  patientList-Hou.py  patientList-Hu.py  patientList-Jiang.py  patientList-Li.py  patientList-SX.py  patientList-Xiao.py  patientList-Zhang.py  patientList-Zhou.py  patientList.py  pre-arrange.py  pyproject.toml  qc-monday.json  qc-monday.py  response-SX.json  response.json  response_dailyreport.json  response_notify.json  response_surgeryinform.json  saturday-plus.py  surgery-inform.py  sx-thursday.json  sx-thursday.py  sx-tuesday.json  sx-tuesday.py  who.py  wordpress-Hu.py  wordpress-SX.py  wordpress-Three.py  wordpress-Xiao.py  wordpress-Zhou.py  wordpress.py  (+2 more)
dicom-download/: dicom.py
drgs-fee/: 2024data.xlsx  drgs-fee.py
otology-database/: create-database.md  islocalimageexist.py  patient-info-upload.py  pic-get.ahk  repoNo_get.py
patient-docu/: patient-docu.py  patient-document.py  patient-history.py  patient-pathology.py  patient-precode.py  patient-series.py  readme.md
single-disease/: single-disease.py
任务计划配置/: Daily Report.xml  wordpress-Hu.xml  wordpress-SX.xml  患者列表-Hu.xml  患者列表-SX.xml  术前谈话.xml
