[tool.poetry]
name = "medtracker"
version = "0.1.0"
description = ""
authors = ["zhihuai1982 <zhihuai1982@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.13.0"
selenium = "^4.14.0"
py-trello = "^0.19.0"
pandas = "^2.1.1"
html-table = "^1.0"
bs4 = "^0.0.1"
lxml = "^4.9.3"
matplotlib = "^3.8.1"
openpyxl = "^3.1.2"
xlsxwriter = "^3.1.9"
flask = "^3.0.0"
streamlit = "^1.29.0"
html5lib = "^1.1"
openai = "^1.61.0"
langchain-openai = "^0.3.3"
youtube-transcript-api = "^0.6.3"
yt-dlp = "^2025.1.26"
python-dotenv = "^1.0.1"
httpcore = "^1.0.7"
reportlab = "^4.2.5"
ipykernel = "^6.29.5"
jupyter-client = "^8.6.3"
zmq = "^0.0.0"
annotated-types = "^0.7.0"
pydantic-core = "^2.28.0"
anyio = "^4.8.0"
distro = "^1.9.0"
jiter = "^0.8.2"
jinja2 = "^3.1.5"
python-docx = "^1.1.2"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "tsinghua"
priority = "default"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
