[project]
name = "medtracker"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "zhihuai1982", email = "zhihuai1982@gmail.com" }
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=2.1.1,<3.0.0",
    "matplotlib>=3.8.1,<4.0.0",
    "xlsxwriter>=3.1.9,<4.0.0",
    "ipykernel>=6.29.5,<7.0.0",
    "jupyter-client>=8.6.3,<9.0.0",
    "requests>=2.32.5",
    "jinja2>=3.1.6",
    "lxml>=6.0.2",
]
